// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activity goals subsection the Goal component, wrapper around the form and review with an initially-collapsed goal expands when edit is called 1`] = `
<Goal
  goal={Object {}}
  handleChange={[Function]}
  handleDelete={[Function]}
  idx={0}
  initialExpanded={false}
>
  <GoalForm
    done={[Function]}
    goal={Object {}}
    handleChange={[Function]}
    handleDelete={[Function]}
    idx={0}
  >
    <div
      className="ds-u-padding-bottom--2 ds-u-border-bottom--2"
    >
      <TextField
        className="data-entry-box"
        hint=""
        label="Goal name"
        name="name"
        type="text"
      >
        <div
          className="ds-u-clearfix data-entry-box"
        >
          <FormLabel
            component="label"
            fieldId="textfield_3"
            hint=""
          >
            <label
              className="ds-c-label"
              htmlFor="textfield_3"
            >
              <span
                className=""
              >
                Goal name
              </span>
            </label>
          </FormLabel>
          <input
            className="ds-c-field"
            id="textfield_3"
            name="name"
            type="text"
          />
        </div>
      </TextField>
      <TextField
        className="data-entry-box"
        hint="Briefly describe how the state will measure progress toward the identified goal."
        label="Benchmarks"
        multiline={true}
        name="milestones"
        rows={6}
        type="text"
      >
        <div
          className="ds-u-clearfix data-entry-box"
        >
          <FormLabel
            component="label"
            fieldId="textfield_4"
            hint="Briefly describe how the state will measure progress toward the identified goal."
          >
            <label
              className="ds-c-label"
              htmlFor="textfield_4"
            >
              <span
                className=""
              >
                Benchmarks
              </span>
              <span
                className="ds-c-field__hint"
              >
                Briefly describe how the state will measure progress toward the identified goal.
              </span>
            </label>
          </FormLabel>
          <textarea
            className="ds-c-field"
            id="textfield_4"
            name="milestones"
            rows={6}
          />
        </div>
      </TextField>
      <Button
        className="ds-u-margin-top--4"
        onClick={[Function]}
        type="button"
        variation="primary"
      >
        <button
          className="ds-c-button ds-c-button--primary ds-u-margin-top--4"
          onClick={[Function]}
          type="button"
        >
          Done
        </button>
      </Button>
    </div>
  </GoalForm>
</Goal>
`;

exports[`activity goals subsection the Goal component, wrapper around the form and review with an initially-collapsed goal renders correctly 1`] = `
<Goal
  goal={Object {}}
  handleChange={[Function]}
  handleDelete={[Function]}
  idx={0}
  initialExpanded={false}
>
  <GoalReview
    edit={[Function]}
    goal={Object {}}
    handleDelete={[Function]}
    idx={0}
  >
    <Review
      editContent={
        <div
          className="nowrap"
        >
          <Button
            onClick={[Function]}
            size="small"
            type="button"
            variation="transparent"
          >
            Edit
          </Button>
          <React.Fragment>
            |
            <Button
              onClick={[Function]}
              size="small"
              type="button"
              variation="transparent"
            >
              Remove
            </Button>
          </React.Fragment>
        </div>
      }
      editHref="#"
      editText="Edit"
      heading={
        <h5
          className="ds-h4"
        >
          1
          . 
        </h5>
      }
      onEditClick={[Function]}
    >
      <div
        className="ds-c-review ds-u-border-bottom--2 ds-u-padding-y--2 ds-u-justify-content--between ds-u-display--flex"
      >
        <div
          className="ds-u-margin-right--2"
        >
          <h3
            className="ds-c-review__heading ds-text ds-u-margin-bottom--0 ds-u-font-weight--bold ds-u-display--inline-block"
          >
            <h5
              className="ds-h4"
            >
              1
              . 
            </h5>
          </h3>
          <div
            className="ds-c-review__body"
          >
            <p
              className="ds-u-margin-top--2"
            >
              Benchmark: 
            </p>
          </div>
        </div>
        <div
          className="nowrap"
        >
          <Button
            onClick={[Function]}
            size="small"
            type="button"
            variation="transparent"
          >
            <button
              className="ds-c-button ds-c-button--transparent ds-c-button--small"
              onClick={[Function]}
              type="button"
            >
              Edit
            </button>
          </Button>
          |
          <Button
            onClick={[Function]}
            size="small"
            type="button"
            variation="transparent"
          >
            <button
              className="ds-c-button ds-c-button--transparent ds-c-button--small"
              onClick={[Function]}
              type="button"
            >
              Remove
            </button>
          </Button>
        </div>
      </div>
    </Review>
  </GoalReview>
</Goal>
`;

exports[`activity goals subsection the Goal component, wrapper around the form and review with an initially-expanded goal collapses when done is called 1`] = `
<Goal
  goal={Object {}}
  handleChange={[Function]}
  handleDelete={[Function]}
  idx={0}
  initialExpanded={true}
>
  <GoalReview
    edit={[Function]}
    goal={Object {}}
    handleDelete={[Function]}
    idx={0}
  >
    <Review
      editContent={
        <div
          className="nowrap"
        >
          <Button
            onClick={[Function]}
            size="small"
            type="button"
            variation="transparent"
          >
            Edit
          </Button>
          <React.Fragment>
            |
            <Button
              onClick={[Function]}
              size="small"
              type="button"
              variation="transparent"
            >
              Remove
            </Button>
          </React.Fragment>
        </div>
      }
      editHref="#"
      editText="Edit"
      heading={
        <h5
          className="ds-h4"
        >
          1
          . 
        </h5>
      }
      onEditClick={[Function]}
    >
      <div
        className="ds-c-review ds-u-border-bottom--2 ds-u-padding-y--2 ds-u-justify-content--between ds-u-display--flex"
      >
        <div
          className="ds-u-margin-right--2"
        >
          <h3
            className="ds-c-review__heading ds-text ds-u-margin-bottom--0 ds-u-font-weight--bold ds-u-display--inline-block"
          >
            <h5
              className="ds-h4"
            >
              1
              . 
            </h5>
          </h3>
          <div
            className="ds-c-review__body"
          >
            <p
              className="ds-u-margin-top--2"
            >
              Benchmark: 
            </p>
          </div>
        </div>
        <div
          className="nowrap"
        >
          <Button
            onClick={[Function]}
            size="small"
            type="button"
            variation="transparent"
          >
            <button
              className="ds-c-button ds-c-button--transparent ds-c-button--small"
              onClick={[Function]}
              type="button"
            >
              Edit
            </button>
          </Button>
          |
          <Button
            onClick={[Function]}
            size="small"
            type="button"
            variation="transparent"
          >
            <button
              className="ds-c-button ds-c-button--transparent ds-c-button--small"
              onClick={[Function]}
              type="button"
            >
              Remove
            </button>
          </Button>
        </div>
      </div>
    </Review>
  </GoalReview>
</Goal>
`;

exports[`activity goals subsection the Goal component, wrapper around the form and review with an initially-expanded goal renders correctly 1`] = `
<Goal
  goal={Object {}}
  handleChange={[Function]}
  handleDelete={[Function]}
  idx={0}
  initialExpanded={true}
>
  <GoalForm
    done={[Function]}
    goal={Object {}}
    handleChange={[Function]}
    handleDelete={[Function]}
    idx={0}
  >
    <div
      className="ds-u-padding-bottom--2 ds-u-border-bottom--2"
    >
      <TextField
        className="data-entry-box"
        hint=""
        label="Goal name"
        name="name"
        type="text"
      >
        <div
          className="ds-u-clearfix data-entry-box"
        >
          <FormLabel
            component="label"
            fieldId="textfield_1"
            hint=""
          >
            <label
              className="ds-c-label"
              htmlFor="textfield_1"
            >
              <span
                className=""
              >
                Goal name
              </span>
            </label>
          </FormLabel>
          <input
            className="ds-c-field"
            id="textfield_1"
            name="name"
            type="text"
          />
        </div>
      </TextField>
      <TextField
        className="data-entry-box"
        hint="Briefly describe how the state will measure progress toward the identified goal."
        label="Benchmarks"
        multiline={true}
        name="milestones"
        rows={6}
        type="text"
      >
        <div
          className="ds-u-clearfix data-entry-box"
        >
          <FormLabel
            component="label"
            fieldId="textfield_2"
            hint="Briefly describe how the state will measure progress toward the identified goal."
          >
            <label
              className="ds-c-label"
              htmlFor="textfield_2"
            >
              <span
                className=""
              >
                Benchmarks
              </span>
              <span
                className="ds-c-field__hint"
              >
                Briefly describe how the state will measure progress toward the identified goal.
              </span>
            </label>
          </FormLabel>
          <textarea
            className="ds-c-field"
            id="textfield_2"
            name="milestones"
            rows={6}
          />
        </div>
      </TextField>
      <Button
        className="ds-u-margin-top--4"
        onClick={[Function]}
        type="button"
        variation="primary"
      >
        <button
          className="ds-c-button ds-c-button--primary ds-u-margin-top--4"
          onClick={[Function]}
          type="button"
        >
          Done
        </button>
      </Button>
    </div>
  </GoalForm>
</Goal>
`;

exports[`activity goals subsection the GoalForm component renders properly 1`] = `
<div
  className="ds-u-padding-bottom--2 ds-u-border-bottom--2"
>
  <TextField
    className="data-entry-box"
    hint=""
    label="Goal name"
    name="name"
    onChange={[Function]}
    type="text"
    value="goal name"
  />
  <TextField
    className="data-entry-box"
    hint="Briefly describe how the state will measure progress toward the identified goal."
    label="Benchmarks"
    multiline={true}
    name="milestones"
    onChange={[Function]}
    rows={6}
    type="text"
    value="goal benchmarks"
  />
  <Button
    className="ds-u-margin-top--4"
    onClick={[Function]}
    type="button"
    variation="primary"
  >
    Done
  </Button>
</div>
`;

exports[`activity goals subsection the GoalReview component renders properly with a delete handler 1`] = `
<Review
  editContent={
    <div
      className="nowrap"
    >
      <Button
        onClick={[Function]}
        size="small"
        type="button"
        variation="transparent"
      >
        Edit
      </Button>
      <React.Fragment>
        |
        <Button
          onClick={[Function]}
          size="small"
          type="button"
          variation="transparent"
        >
          Remove
        </Button>
      </React.Fragment>
    </div>
  }
  editHref="#"
  editText="Edit"
  heading={
    <h5
      className="ds-h4"
    >
      1
      . 
      goal name
    </h5>
  }
  onEditClick={[Function]}
>
  <p
    className="ds-u-margin-top--2"
  >
    Benchmark: 
    goal benchmarks
  </p>
</Review>
`;

exports[`activity goals subsection the GoalReview component renders properly without a delete delete 1`] = `
<Review
  editContent={
    <div
      className="nowrap"
    >
      <Button
        onClick={[Function]}
        size="small"
        type="button"
        variation="transparent"
      >
        Edit
      </Button>
    </div>
  }
  editHref="#"
  editText="Edit"
  heading={
    <h5
      className="ds-h4"
    >
      1
      . 
      goal name
    </h5>
  }
  onEditClick={[Function]}
>
  <p
    className="ds-u-margin-top--2"
  >
    Benchmark: 
    goal benchmarks
  </p>
</Review>
`;

exports[`activity goals subsection the Goals commponent, wrapping all the others with no goals renders properly 1`] = `
<Subsection
  id={null}
  nested={true}
  resource="activities.goals"
>
  <NoDataMsg>
    Additional costs for this activity are missing.
  </NoDataMsg>
  <Button
    className="ds-u-margin-top--4 visibility--screen"
    onClick={[Function]}
    type="button"
  >
    Add a goal
  </Button>
  <hr />
</Subsection>
`;

exports[`activity goals subsection the Goals commponent, wrapping all the others with one goal renders properly 1`] = `
<Subsection
  id={null}
  nested={true}
  resource="activities.goals"
>
  <div
    className="ds-u-border-top--1"
  >
    <Goal
      goal={
        Object {
          "expanded": false,
          "key": "goal-1",
        }
      }
      handleChange={[Function]}
      handleDelete={null}
      idx={0}
      initialExpanded={false}
      key="goal-1"
    />
  </div>
  <Button
    className="ds-u-margin-top--4 visibility--screen"
    onClick={[Function]}
    type="button"
  >
    Add a goal
  </Button>
  <hr />
</Subsection>
`;

exports[`activity goals subsection the Goals commponent, wrapping all the others with some goals renders properly 1`] = `
<Subsection
  id={null}
  nested={true}
  resource="activities.goals"
>
  <div
    className="ds-u-border-top--1"
  >
    <Goal
      goal={
        Object {
          "expanded": false,
          "key": "goal-1",
        }
      }
      handleChange={[Function]}
      handleDelete={[Function]}
      idx={0}
      initialExpanded={false}
      key="goal-1"
    />
    <Goal
      goal={
        Object {
          "expanded": false,
          "key": "goal-2",
        }
      }
      handleChange={[Function]}
      handleDelete={[Function]}
      idx={1}
      initialExpanded={false}
      key="goal-2"
    />
    <Goal
      goal={
        Object {
          "expanded": true,
          "key": "goal-3",
        }
      }
      handleChange={[Function]}
      handleDelete={[Function]}
      idx={2}
      initialExpanded={true}
      key="goal-3"
    />
  </div>
  <Button
    className="ds-u-margin-top--4 visibility--screen"
    onClick={[Function]}
    type="button"
  >
    Add a goal
  </Button>
  <hr />
</Subsection>
`;
